data/derived/fa15/progs/unify/prog1033.ml.out
Characters 150-176:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float list
       but an expression was expected of type 'a * 'b
